SG-2004-05-28-0: Bugfix:    fixed qmaster on HP-11. The problem was a "char save[32k]"
                            in the file: daemons/qmaster/sge_give_jobs.c
                 Changed:   qmaster
                 Review:    MD

MD-2004-05-28-3: Enhancem:  README-Upgrade.txt

DT-2004-05-28-5: Bugfix:    o Resolved conflict between new file staging howto
                              and previous
                 Changed:   howtos

MD-2004-05-28-2: Bugfix:    - message
                 Changed:   inst_sge

MD-2004-05-28-1: Enhancem:  - auto backup
                 Changed:   inst_sge

DT-2004-05-28-4: Bugfix:    o Added file staging to howto main page
                 Changed:   howtos
                 Issue:     952

DT-2004-05-28-3: Bugfix:    o Changes to DRMAA howto
                            o Added file staging howto
                 Changed:   howtos
                 Issue:     952

MD-2004-05-28-0: Bugfix:    - some file creation/deletion
                            - hints
                            - logging
                 Changed:   inst_sge

JG-2004-05-28-1: Bugfix:    Fixed install_execd and berkeley db rpc server 
                            installation.
                 Review:    MD

DT-2004-05-28-2: Cleanup:   o Documented issue in sge_flatfile.c
                 Changed:   Flatfile spooling

DT-2004-05-28-1: Bugfix:    o Clarified drmaa_wait() man page
                 Changed:   docs

DT-2004-05-28-0: Bugfix:    o Fixed DRMAA C binding revision number
                 Changed:   DRMAA

JG-2004-05-28-0: Bugfix:    Fixed memory leaks in fileparsing and in japi.
                 Enhancem.: Reduced stack memory usage of static dstrings.
                 Review:    SG

MD-2004-05-27-1: Bugfix:    - backup/restore directory check
                            - berkeley info text
                            - rc template qmaster shutdown
                 Review:    AS, JG

JG-2004-05-27-2: Bugfix:    Fixed memory leaks in execd.