@@ -1,5 +1,10 @@
-SG-2004-05-28-0: Bugfix:    fixed qmaster on HP-11. The problem was a "char save[32k]"
-                            in the file: daemons/qmaster/sge_give_jobs.c
+JG-2004-06-01-0: Testsuite: Don't set file permissions when installing zip 
+                            packages. 
+                            Fixed qmaster size test.
+
+SG-2004-05-28-0: Bugfix:    fixed qmaster on HP-11. The problem was a 
+                            "char save[32k]" in the file: 
+                            daemons/qmaster/sge_give_jobs.c
                  Changed:   qmaster
                  Review:    MD
 
